KVH/mykvh/Email-to-anything/objects/User.object
<CustomObject>
    <fields>
        <fullName>Email_Html_Body__c</fullName>
        <description>Stores html body of email to be accessed in SF templates.</description>
        <label>Last Email Html Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Text_Body__c</fullName>
        <description>Stores text body of email to be accessed in SF templates.</description>
        <label>Last Email Text Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>